dhall/tests/type-errors/unit/ListLiteralEmptyNotType.txt
 --> 1:6
  |
1 | [] : List Type␊
  |      ^--^
  |
  = Type error: Wrong type of function argument
